--- a/app/src/main/res/drawable/green_border.xml
+++ b/app/src/main/res/drawable/green_border.xml
@@ -4,7 +4,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/pink"/>
+        android:color="@color/green2"/>
 
     <corners
         android:radius="8dp"/>
