--- a/app/src/main/res/layout/fragment_add_reserva.xml
+++ b/app/src/main/res/layout/fragment_add_reserva.xml
@@ -1,66 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:padding="20dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
 
-    <ScrollView
+    <View
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="12dp"
-        tools:context=".NewReservaFragment">
+        android:layout_height="32dp" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:layout_marginTop="55dp">
+    <TextView android:text="Fecha de inicio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"/>
 
+    <Button
+        android:id="@+id/fechaInicio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Selecciona fecha de inicio"
+        android:backgroundTint="@color/green1"/>
 
-            <Button
-                android:id="@+id/addReservaFecha"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Haz click para reservar la fecha"
-                android:gravity="top"
-                android:padding="12dp"
-                android:textSize="18sp"
-                android:backgroundTint="@color/pink"
-                android:textColor="@color/white"
-                android:layout_marginTop="12dp" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="32dp" />
 
-            <TextView
-                android:id="@+id/eligeHora"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/addReservaFecha"
-                android:layout_marginTop="12dp"
-                android:text="Haz click y elige la hora"
-                android:textSize="18sp"
-                android:textColor="@color/pink" />
-
-            <Spinner
-                android:id="@+id/addReservaHora"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/eligeHora"
-                android:layout_marginTop="12dp"
-                android:background="@drawable/pink_border"
-                android:minHeight="48dp" />
+    <TextView android:text="Fecha de fin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:gravity="center"
+        android:layout_gravity="center_horizontal"/>
 
 
-            <EditText
-                android:id="@+id/addReservaComentario"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:hint="Enter the description"
-                android:gravity="top"
-                android:padding="12dp"
-                android:textSize="18sp"
-                android:background="@drawable/pink_border"
-                android:layout_below="@id/addReservaHora"
-                android:layout_marginTop="12dp" />
+    <Button
+        android:id="@+id/fechaFin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Seleccionar fecha de fin"
+        android:backgroundTint="@color/green1"/>
 
-        </RelativeLayout>
-    </ScrollView>
-</layout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="32dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCaravanas"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
+</LinearLayout>
