--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,7 +7,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="80dp"
         android:background="@color/white"
         tools:context=".HomeFragment">
 
@@ -18,7 +17,7 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="48dp"
             android:layout_marginBottom="96dp"
-            android:backgroundTint="@color/pink"
+            android:backgroundTint="@color/green1"
             android:clickable="true"
             android:contentDescription="image"
             android:tintMode="@color/white"
