--- a/app/src/main/res/menu/menu_edit_reserva.xml
+++ b/app/src/main/res/menu/menu_edit_reserva.xml
@@ -4,6 +4,8 @@
     <item
         android:id="@+id/deleteMenu"
         android:icon="@drawable/baseline_delete_24"
-        android:title=""
+        android:title="Eliminar Reserva"
+        android:enabled="true"
+        android:visible="true"
         app:showAsAction="always"/>
 </menu>
