--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,7 +9,7 @@
     <fragment
         android:id="@+id/homeFragment"
         android:name="com.example.autocaravanas.fragments.HomeFragment"
-        android:label="HomeFragment"
+        android:label="Autocaravanas Milan"
         tools:layout="@layout/fragment_home">
         <action
             android:id="@+id/action_homeFragment_to_addReservaFragment"
@@ -21,7 +21,7 @@
     <fragment
         android:id="@+id/addReservaFragment"
         android:name="com.example.autocaravanas.fragments.AddReservaFragment"
-        android:label="AddReservaFragment"
+        android:label="Autocaravanas Milan - Añadir Reserva"
         tools:layout="@layout/fragment_add_reserva">
         <action
             android:id="@+id/action_addReservaFragment_to_homeFragment"
@@ -30,7 +30,7 @@
     <fragment
         android:id="@+id/editReservaFragment"
         android:name="com.example.autocaravanas.fragments.EditReservaFragment"
-        android:label="EditReservaFragment"
+        android:label="Autocaravanas Milan - Borrar/Editar Reserva"
         tools:layout="@layout/fragment_edit_reserva">
         <action
             android:id="@+id/action_editReservaFragment_to_homeFragment"
